small addition to page

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
  <title>Hello courseera</title>
  </head>
  <body>
-<h1>Hello courseera</h1>
+<h1>Hello courseera its a great course</h1>
  </body>
  </html>
